[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Gridsynth-Python-wrapper"
version = "1.0.0"
description = "Use Gridsynth in python"
readme = "README.md"
authors = [{ name = "Mark McGuire", email = "littlemarkmcguire@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GPL3",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["Quantum", "Synthesis"]
dependencies = [
    'tomli; python_version < "3.11"',
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/InfamousPlatypus/Gridsynth-Python-wrapper"
